# game_2d

./: CMakeLists.txt  main.cpp
include/engine/: color.hpp  index_buffer.hpp  input_manager.hpp  quad.hpp  renderer.hpp  shader.hpp  texture.hpp  timer.hpp  vertex_array.hpp  vertex_attribute.hpp  vertex_buffer.hpp
include/game/: camera2d.hpp  game.hpp  player.hpp
shaders/: fragment_default.glsl  vertex_default.glsl
src/engine/: index_buffer.cpp  input_manager.cpp  quad.cpp  renderer.cpp  shader.cpp  texture.cpp  timer.cpp  vertex_array.cpp  vertex_buffer.cpp
src/game/: camera2d.cpp  game.cpp  player.cpp
